DevOps-Project-36/3-tier-app-eks/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 3-tier-app-eks
  labels:
    name: 3-tier-app-eks
