DevOps-Project-36/3-tier-app-eks/k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: 3-tier-app-eks
  labels:
    service: database
spec:
  type: ExternalName
  externalName: skymonil-postgres.c54w64eikb30.ap-south-1.rds.amazonaws.com
  ports:
  - port: 5432
  # postgres-db.devopsdozo.svc.cluster.local
